Add new projects

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                 <div class="tools justify-content-center">
                   <i class="html5 fa-brands fa-html5"></i>
                   <i class="css fa-brands fa-css3-alt"></i>
+                  <i class="js fa-brands fa-js"></i>
                   <i class="figma fa-brands fa-figma"></i>
                   <i class="bootstrap fa-brands fa-bootstrap"></i>
+                  <i class="react fa-brands fa-react"></i>
                 </div>
               </div>
             </div>
@@ -133,6 +135,17 @@
                   <h5 class="card-title">Redesign Website</h5>
                   <p class="caption card-text">Redesign an old website with new design.</p>
                   <a href="https://xxandrys.github.io/doto2.github.io/Doto2/index.html" target="_blank" class="btn btn-primary">See More</a>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-4 justify-content-center">
+              <div class="card crop-img">
+                <img src="img/Andrys Movies.png" class="card-img-top" width="200" height="250" />
+                <div class="card-body">
+                  <h5 class="card-title">Andry's Movies</h5>
+                  <p class="caption card-text">A simple project to buy cinema tickets using React.js</p>
+                  <a href="https://xxandrys.github.io/andrysmovies/" target="_blank" class="btn btn-primary">See More</a>
                 </div>
               </div>
             </div>
