--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
               </div>
             </div>
             
+            <div class="col-md-4 justify-content-center">
+              <div class="card crop-img">
+                <img src="img/Andrys Movies.png" class="card-img-top" width="200" height="250" />
+                <div class="card-body">
+                  <h5 class="card-title">Andry's Movies</h5>
+                  <p class="caption card-text">A simple project to buy cinema tickets using React.js</p>
+                  <a href="https://xxandrys.github.io/andrysmovies/" target="_blank" class="btn btn-primary">See More</a>
+                </div>
+              </div>
+            </div>
+            
           </div>
         </div>
       </div>
