--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="tools_animate">
             <div class="about_main row text-center mb-3 mt-3">
               <div class="col">
-                <h2 class="fw-normal pt-5">Tools I've been used</h2>
+                <h2 class="fw-normal pt-5">Tools I have used</h2>
                 <div class="tools justify-content-center">
                   <i class="html5 fa-brands fa-html5"></i>
                   <i class="css fa-brands fa-css3-alt"></i>
